--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
     </header>
     <main>
-        <section>
+        <section class="mt-5">
             <!-- <div class="grid grid-cols-4 gap-4">
 
                 <div>
@@ -84,34 +84,40 @@
 
 
 
-            <div class="row row-cols-2 row-cols-md-4 g-4">
+            <div class="row row-cols-2 row-cols-md-4 g-4 ms-4 me-4">
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 bg-dark text-white">
                         <img src="image/neymar.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h2 class="card-title">Neymar Jr</h2>
+                        <div class="card-body text-center">
+                            <h2 class="card-title fw-semibold fs-3">Neymar Jr</h2>
                             <p class="card-text">150 Goals . 120 Assist</p>
-                            <button type="submit">Select</button>
+                            <div class=" mt-3">
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 bg-dark text-white">
                         <img src="image/messi.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h2 class="card-title">Lionel Messi</h2>
+                        <div class="card-body text-center">
+                            <h2 class="card-title fw-semibold fs-3">Lionel Messi</h2>
                             <p class="card-text">200 Goals . 150 Assist</p>
-                            <button type="submit">Select</button>
+                            <div class=" mt-3">
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card h-100 bg-dark text-white">
                         <img src="image/ronaldo.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h2 class="card-title">Neymar Jr</h2>
-                            <p class="card-text">200 Goals . 150 Assist</p>
-                            <button type="submit">Select</button>
+                        <div class="card-body text-center">
+                            <h2 class="card-title fw-semibold fs-3">Cristiano Ronaldo</h2>
+                            <p class="card-text text-center">200 Goals . 150 Assist</p>
+                            <div class=" mt-3">
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -119,58 +125,56 @@
                     <div class="card h-100">
                         <h1>Selected-V</h1>
                         <div class="card-body">
-                            <h2 class="card-title">Neymar Jr</h2>
-                            <p class="card-text">100 goals . 36 assist</p>
-                            <button type="submit">Select</button>
+                            <h2 class="card-title fw-semibold fs-3">Vinicius Jr</h2>
+                            <p class="card-text">50 goals . 30 assist</p>
+
+
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card bg-dark text-white">
                         <img src="image/vini.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h2 class="card-title">Neymar Jr</h2>
-                            <p class="card-text">100 goals . 36 assist</p>
-                            <button type="submit">Select</button>
+                        <div class="card-body text-center">
+                            <h2 class="card-title fw-semibold fs-3">Vinicius Jr</h2>
+                            <p class="card-text">50 Goals . 30 Assist</p>
+                            <div class=" mt-3">
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
+                    <div class="card bg-dark text-white ">
                         <img src="image/firmino.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h2 class="card-title">Neymar Jr</h2>
-                            <p class="card-text">100 goals . 36 assist</p>
-                            <button type="submit">Select</button>
+                        <div class="card-body text-center">
+                            <h2 class="card-title fw-semibold fs-3">Roberto Firmino</h2>
+                            <p class="card-text">70 Goals . 50 Assist</p>
+                            <div class=" mt-3">
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card ">
-                        <img src="image/allison.webp" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h2 class="card-title">Neymar Jr</h2>
-                            <p class="card-text">100 goals . 36 assist</p>
-                            <button type="submit">Select</button>
+                    <div class="card bg-dark text-white">
+                        <img src=" image/allison.webp" class="card-img-top" alt="...">
+                        <div class="card-body text-center">
+                            <h2 class="card-title fw-semibold fs-3">Allision Bekar</h2>
+                            <p class="card-text">1 Goals . 50 Save</p>
+                            <div class=" mt-3">
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card h-100">
-                        <img src="" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h2 class="card-title">Neymar Jr</h2>
                             <p class="card-text">100 goals . 36 assist</p>
                             <button type="submit">Select</button>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dignissimos eveniet
-                                architecto explicabo laborum iure, quos incidunt illum eaque ut dolorem atque adipisci
-                                aliquam cum quae esse amet repudiandae error ab doloremque deleniti quis nihil. Nulla,
-                                ex repellat temporibus nisi iure praesentium perferendis magnam unde explicabo iste
-                                quasi obcaecati quia animi ipsam consectetur recusandae incidunt culpa sed harum. Omnis
-                                dolorum, ullam amet quia nemo nisi repudiandae exercitationem fugit! Quae nam, eaque
-                                commodi quisquam voluptate unde, sequi, tempore cupiditate tenetur nisi eius quibusdam
-                                quis quas earum! Quibusdam officia enim asperiores fugiat nihil commodi sequi hic eos
-                                voluptatem, tempora sunt cum sint.</p>
+                            <p>Lorem ipsum dolo</p>
                         </div>
                     </div>
                 </div>
