--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class=" bg-secondary">
     <header>
         <!-- <section class=" py-8 px-8">
             <div class="flex">
@@ -64,35 +64,17 @@
     </header>
     <main>
         <section class="mt-5">
-            <!-- <div class="grid grid-cols-4 gap-4">
 
-                <div>
-                    <img src="image/neymar.jpg" alt="">
-                    <h1>Neymar Jr</h1>
-                    <p>120 goals</p>
-                    <p>.</p>
-                    <p>120 goals</p>
-                </div>
-                <div> <img src="image/allison.webp" alt=""> </div>
-                <div> <img src="image/allison.webp" alt=""> </div>
-                <div> <img src="image/allison.webp" alt=""> </div>
-                <div> <img src="image/allison.webp" alt=""> </div>
-                <div> <img src="image/allison.webp" alt=""> </div>
-                <div> <img src="image/allison.webp" alt=""> </div>
-                <div> <img src="image/allison.webp" alt=""> </div>
-            </div> -->
-
-
-
-            <div class="row row-cols-2 row-cols-md-4 g-4 ms-4 me-4">
+            <div class="row row-cols-2 row-cols-md-4 g-4 ms-4 me-4 ">
                 <div class="col">
-                    <div class="card h-100 bg-dark text-white">
+                    <div class="card h-100 bg-dark text-white ">
                         <img src="image/neymar.jpg" class="card-img-top" alt="...">
                         <div class="card-body text-center">
                             <h2 class="card-title fw-semibold fs-3">Neymar Jr</h2>
                             <p class="card-text">150 Goals . 120 Assist</p>
                             <div class=" mt-3">
-                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5"
+                                    onclick="addToCart(this)">Select</button>
                             </div>
                         </div>
                     </div>
@@ -104,7 +86,8 @@
                             <h2 class="card-title fw-semibold fs-3">Lionel Messi</h2>
                             <p class="card-text">200 Goals . 150 Assist</p>
                             <div class=" mt-3">
-                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5"
+                                    onclick="addToCart(this)">Select</button>
                             </div>
                         </div>
                     </div>
@@ -116,19 +99,17 @@
                             <h2 class="card-title fw-semibold fs-3">Cristiano Ronaldo</h2>
                             <p class="card-text text-center">200 Goals . 150 Assist</p>
                             <div class=" mt-3">
-                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5"
+                                    onclick="addToCart(this)">Select</button>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="card h-100">
-                        <h1>Selected-V</h1>
+                    <div class="card h-100 bg-dark text-center text-white">
+                        <h1 class="fw-semibold fs-3 text-white"><u>Selected-V</u></h1>
                         <div class="card-body">
-                            <h2 class="card-title fw-semibold fs-3">Vinicius Jr</h2>
-                            <p class="card-text">50 goals . 30 assist</p>
-
-
+                            <ul class="add-name"></ul>
                         </div>
                     </div>
                 </div>
@@ -139,7 +120,8 @@
                             <h2 class="card-title fw-semibold fs-3">Vinicius Jr</h2>
                             <p class="card-text">50 Goals . 30 Assist</p>
                             <div class=" mt-3">
-                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5"
+                                    onclick="addToCart(this)">Select</button>
                             </div>
                         </div>
                     </div>
@@ -151,7 +133,8 @@
                             <h2 class="card-title fw-semibold fs-3">Roberto Firmino</h2>
                             <p class="card-text">70 Goals . 50 Assist</p>
                             <div class=" mt-3">
-                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5"
+                                    onclick="addToCart(this)">Select</button>
                             </div>
                         </div>
                     </div>
@@ -163,7 +146,8 @@
                             <h2 class="card-title fw-semibold fs-3">Allision Bekar</h2>
                             <p class="card-text">1 Goals . 50 Save</p>
                             <div class=" mt-3">
-                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 ">Select</button>
+                                <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5"
+                                    onclick="addToCart(this)">Select</button>
                             </div>
                         </div>
                     </div>
@@ -181,9 +165,13 @@
             </div>
         </section>
     </main>
+    <footer class="text-center mt-5">
+        <p class="text-light">Copyright @ 2022 All Rights Reserved.</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <script src="connect.js"></script>
 
 </body>
 
