--- a/index.html
+++ b/index.html
@@ -14,53 +14,28 @@
 </head>
 
 <body class=" bg-secondary">
-    <header>
-        <!-- <section class=" py-8 px-8">
-            <div class="flex">
-                <div>
-                    <div class="bg-cover"><img class="mt-20 p-8" src="image/cover-removebg-preview.png" alt=""
-                            srcset="">
-                    </div>
-                </div>
 
-                <div>
-                    <h1 class=" text-5xl text-red-600 clr">My
-                        best five Football players</h1>
-                    <p class="text-2xl">We've tried to balance current form with overall talent as best we can. We
-                        hope
-                        you like the
-                        list,
-                        but
-                        we've
-                        been around the block enough times to know that there will be plenty of dissent from the
-                        gallery.</p>
-                </div>
-                <div class=""><img src="image/23.png" alt="" srcset="">
-                </div>
-            </div>
+    <!-- header start -->
 
+    <header class="page-header bg-black container-fluid p-0 pt-3">
+        <div class="row m-0">
+            <div class="col-12 col-sm-5 col-md-3 ps-0  order-1 order-sm-0 bg-lion pt-4 pt-md-2 pt-lg-4 pe-lg-4 pe-md-0">
+                <img src="image/cover-removebg-preview.png" class="w-70 h-80" alt="cover">
             </div>
-        </section> -->
-
-        <section class="bg-slate-800 p-32  ">
-            <div class="flex  ">
-                <div class=" mt-20 "> <img class="" src="image/cover-removebg-preview.png" alt="">
-                </div>
-                <div class="contents">
-                    <div class="">
-                        <h1 class=" text-4xl lg:text-5xl font-semibold text-orange-300 font-['Berkshire_Swash']">
-                            Build
-                            Your Dream Team</h1>
-                        <p class="text-2xl font-semibold text-orange-300">We've tried to balance current
-                            form with overall talent as best we can. we've
-                            been around the block enough times to know that there will be plenty of dissent from the
-                            gallery </p>
-                    </div>
-                    <div class=""> <img class=" bg-slate-800" style="width: 60%;" src="image/23.png" alt="">
-                    </div>
-                </div>
+            <div class="col-12 col-sm-7 col-md-7 text-center px-sm-4">
+                <h1 class="banner-title pb-4 mt-5 px-sm-0 display-2 text-orange-600">Choose Your Best <span class="position-relative
+    " id="marker-container">Five<img id="marker" class="position-absolute start-50 translate-middle"
+                            src="images/Linemarker.svg" alt=""></span></h1>
+                <p class="text-white">We've tried to balance current
+                    form with overall talent as best we can. we've
+                    been around the block enough times to know that there will be plenty of dissent from the
+                    gallery.</p>
             </div>
-        </section>
+            <div class="col-md-2 p-0 bg-curve-img position-relative d-none d-md-block">
+                <img src="image/23.png" alt="psg.png" class="pt-2 pt-md-3" style="width: 50%;">
+            </div>
+        </div>
+        <!-- header end -->
     </header>
     <main>
         <section class="mt-5">
@@ -107,7 +82,7 @@
                 </div>
                 <div class="col">
                     <div class="card h-100 bg-dark text-center text-white">
-                        <h1 class="fw-semibold fs-3 text-white"><u>Selected-V</u></h1>
+                        <h1 class="fw-semibold fs-3 text-white mt-4"><u>Selected-V</u></h1>
                         <div class="card-body">
                             <ul class="add-name"></ul>
                         </div>
@@ -152,20 +127,46 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <div class="card-body">
-                            <h2 class="card-title">Neymar Jr</h2>
-                            <p class="card-text">100 goals . 36 assist</p>
-                            <button type="submit">Select</button>
-                            <p>Lorem ipsum dolo</p>
+                <div class="col ">
+                    <div class="card h-100 bg-dark text-center text-white pb-5">
+                        <h1 class="fw-semibold fs-3 text-white mt-4"><u>Budget</u></h1>
+                        <div class="flex mt-4">
+                            <p class="ms-3">Per player</p>
+                            <input class="text-white bg-dark border py-1 ms-2 me-3" type="text" value="1000">
+
+                        </div>
+                        <div class=" mt-3">
+                            <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 mt-2">Calculate</button>
+                        </div>
+                        <div class="flex mt-4">
+                            <p class="ms-3">Player Expenses</p>
+                            <p class="text-white bg-dark ms-4 me-3">$5000</p>
+                        </div>
+                        <div class="flex mt-4">
+                            <p class="ms-3  ">Manager</p>
+                            <input class="text-white bg-dark border py-1 ms-3 me-3" type="text" value="2000">
+                        </div>
+                        <div class="flex mt-4">
+                            <p class="ms-3  ">Coach</p>
+                            <div style="margin-left: 4%;">
+                                <input class="text-white bg-dark border py-1 ms-4 " type="text" value="4000">
+                            </div>
+
+                        </div>
+                        <div class=" mt-3">
+                            <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 mt-2">Calculate
+                                Total</button>
+                        </div>
+                        <div class="flex mt-4">
+                            <p class="ms-3 ">Total</p>
+                            <p class=" bg-dark text-warning" style="margin-left: 60%;">$11000</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
-    <footer class="text-center mt-5">
+    <footer class="text-center mt-5 pb-5">
         <p class="text-light">Copyright @ 2022 All Rights Reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
