players select part

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <div class="col-12 col-sm-7 col-md-7 text-center px-sm-4">
                 <h1 class="banner-title pb-4 mt-5 px-sm-0 display-2 text-orange-600">Choose Your Best <span class="position-relative
-    " id="marker-container">Five<img id="marker" class="position-absolute start-50 translate-middle"
-                            src="images/Linemarker.svg" alt=""></span></h1>
+    " id="marker-container">Five<img id="marker" class="position-absolute start-50 translate-middle" src=""
+                            alt=""></span></h1>
                 <p class="text-white">We've tried to balance current
                     form with overall talent as best we can. we've
                     been around the block enough times to know that there will be plenty of dissent from the
@@ -84,8 +84,12 @@
                     <div class="card h-100 bg-dark text-center text-white">
                         <h1 class="fw-semibold fs-3 text-white mt-4"><u>Selected-V</u></h1>
                         <div class="card-body">
-                            <ul class="add-name"></ul>
+                            <ul id="add-name">
+                                <li></li>
+                            </ul>
                         </div>
+
+
                     </div>
                 </div>
                 <div class="col">
