--- a/index.html
+++ b/index.html
@@ -136,15 +136,16 @@
                         <h1 class="fw-semibold fs-3 text-white mt-4"><u>Budget</u></h1>
                         <div class="flex mt-4">
                             <p class="ms-3">Per player</p>
-                            <input class="text-white bg-dark border py-1 ms-2 me-3" type="text" value="1000">
+                            <input id="input-tk" class="text-white bg-dark border py-1 ms-2 me-3" type="text" value="">
 
                         </div>
                         <div class=" mt-3">
-                            <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 mt-2">Calculate</button>
+                            <button id="player-price"
+                                class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 mt-2">Calculate</button>
                         </div>
                         <div class="flex mt-4">
                             <p class="ms-3">Player Expenses</p>
-                            <p class="text-white bg-dark ms-4 me-3">$5000</p>
+                            <p class="text-white bg-dark ms-4 me-3">$<span id="total-tk"></span> </p>
                         </div>
                         <div class="flex mt-4">
                             <p class="ms-3  ">Manager</p>
@@ -177,6 +178,7 @@
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
     <script src="connect.js"></script>
+    <script src="calculate.js"></script>
 
 </body>
 
