--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My best five</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
@@ -136,35 +135,40 @@
                         <h1 class="fw-semibold fs-3 text-white mt-4"><u>Budget</u></h1>
                         <div class="flex mt-4">
                             <p class="ms-3">Per player</p>
-                            <input id="input-tk" class="text-white bg-dark border py-1 ms-2 me-3" type="text" value="">
+                            <input id="player-cost" class="text-white bg-dark border py-1 ms-2 me-3" type="text"
+                                value="">
 
                         </div>
                         <div class=" mt-3">
-                            <button id="player-price"
-                                class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 mt-2">Calculate</button>
+                            <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 mt-2"
+                                onclick="playerCost(this)">Calculate</button>
                         </div>
                         <div class="flex mt-4">
                             <p class="ms-3">Player Expenses</p>
-                            <p class="text-white bg-dark ms-4 me-3">$<span id="total-tk"></span> </p>
+                            <p class="text-white bg-dark ms-4 me-3">$<span id="total-player-expense"></span> </p>
                         </div>
                         <div class="flex mt-4">
                             <p class="ms-3  ">Manager</p>
-                            <input class="text-white bg-dark border py-1 ms-3 me-3" type="text" value="2000">
+                            <input id="manager-cost" class="text-white bg-dark border py-1 ms-3 me-3" type="text"
+                                value="">
                         </div>
                         <div class="flex mt-4">
                             <p class="ms-3  ">Coach</p>
                             <div style="margin-left: 4%;">
-                                <input class="text-white bg-dark border py-1 ms-4 " type="text" value="4000">
+                                <input id="coach-cost" class="text-white bg-dark border py-1 ms-4 " type="text"
+                                    value="">
                             </div>
 
                         </div>
                         <div class=" mt-3">
-                            <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 mt-2">Calculate
+                            <button class="px-5 py-1 mb-2 bg-primary text-whitetext-center fs-5 mt-2"
+                                onclick="totalCost(this)">Calculate
                                 Total</button>
                         </div>
                         <div class="flex mt-4">
                             <p class="ms-3 ">Total</p>
-                            <p class=" bg-dark text-warning" style="margin-left: 60%;">$11000</p>
+                            <p class=" bg-dark text-warning" style="margin-left: 60%;">$<span id="total-amount"
+                                    class="text-warning"></span> </p>
                         </div>
                     </div>
                 </div>
